Change CV location and header

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li>
-          <a href="#" id="resume-link">Resume</a>
+          <a href="Faine_Angel_Resume.pdf" id="resume-link">Resume</a>
         </li>
         <li>
           <a href="https://github.com/faine1996" target="_blank" rel="noopener noreferrer">Portfolio</a>
