Mobile header fixing

--- a/contact.html
+++ b/contact.html
@@ -35,16 +35,13 @@
 </head>
 <!-- Header -->
 <header id="header" class="header">
+  <button class="mobile-nav-toggle bi bi-list"></button>  <!-- Add this button -->
   <nav class="navmenu">
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li>
-        <a href="Faine_Angel_Resume.pdf" id="resume-link">Resume</a>
-      </li>
-      <li>
-        <a href="https://github.com/faine1996" target="_blank" rel="noopener noreferrer">Portfolio</a>
-      </li>
+      <li><a href="Faine_Angel_Resume.pdf" id="resume-link">Resume</a></li>
+      <li><a href="https://github.com/faine1996" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
