Fixed burger menu on mobile and warning for cv download

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="Faine_Angel_Resume.pdf" id="resume-link">Resume</a></li>
+        <li><a href="Faine_Angel_Resume.pdf" class="resume-link">Resume</a></li>
         <li><a href="https://github.com/faine1996" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -184,7 +184,8 @@
 
   </main>
 
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js" defer></script>
+
   <script src="assets/vendor/aos/aos.js"></script>
   <script>
     AOS.init();
