--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="Faine_Angel_Resume.pdf" id="resume-link">Resume</a></li>
+      <li><a href="Faine_Angel_Resume.pdf" class="resume-link">Resume</a></li>
       <li><a href="https://github.com/faine1996" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -90,7 +90,7 @@
   </main>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js" defer></script>
 
 </body>
 
