--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="Faine_Angel_Resume.pdf" id="resume-link">Resume</a></li>
+        <li><a href="Faine_Angel_Resume.pdf" class="resume-link">Resume</a></li>
         <li><a href="https://github.com/faine1996" target="_blank" rel="noopener noreferrer">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -58,7 +58,8 @@
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/js/main.js"></script>
-
+  <script src="assets/js/main.js" defer></script>
+  
+  
 </body>
 </html>
