--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h2>Faine Angel</h2>
       <p>Backend Developer</p>
       <div class="social-links">
-        <a href="mailto:faineangel69@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="mailto:hi@faineangel.com"><i class="bi bi-envelope"></i></a>
         <a href="https://www.linkedin.com/in/faine-angel-493797181/" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/faine1996" target="_blank"><i class="bi bi-github"></i></a>
       </div>
