Added the contact form code and made adjustments to reload page and sending icon

--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,9 @@
             <div class="text-center" style="margin-top: 10px;">
               <button type="submit">Send Message</button>
             </div>
+            <div id="form-spinner" class="text-center mt-2" style="display: none;">
+              <p>Sending...</p>
+            </div>
           </form>
           <div id="form-status" class="text-center mt-2"></div>
         </div>
